# vllm-bootstrap

./: .dockerignore  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  main.py  pyproject.toml  run.sh
.github/workflows/: ci.yml  publish-image.yml
docs/: RUNPOD.md
proto/: inference.proto
scripts/: bump-version.sh
tests/: test_manager.py
vllm-bootstrap-client/: pyproject.toml
vllm-bootstrap-client/vllm_bootstrap_client/: __init__.py  client.py  models.py
vllm_bootstrap/: __main__.py  api.py  auth.py  config.py  grpc_server.py  manager.py  models.py  worker.py
vllm_bootstrap/__tests__/: test_api.py  test_auth.py  test_config.py  test_grpc_server.py  test_integration.py  test_manager.py  test_vllm_compat.py
vllm_bootstrap/__tests__/fixtures/: nvidia_smi.txt  nvidia_smi_query_gpu_stats.txt  vllm_startup_error.txt
vllm_bootstrap/templates/: home.html
