[project]
name = "vllm-bootstrap-client"
version = "0.1.0"
description = "gRPC client for vllm-bootstrap inference service"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vllm_bootstrap_client"]
